# dovai

./: .gitignore  DOVAI.md  LICENSE  PARITY.md  README.md  install.sh
.github/: FUNDING.yml
.github/workflows/: release.yml  rust-ci.yml
dovai_claude/: README.md  install.sh  package-lock.json  package.json  tsconfig.json
dovai_claude/docs/: ARCHITECTURE.md  BUILD_LOG.md  PLAN_DATA_DIR_SPLIT.md  PLAN_SMART_FOLDERS.md  SPEC.md
dovai_claude/scripts/: migrate-to-single-sarah.ts  reset-transient-failures.mjs
dovai_claude/src/: index.ts
dovai_claude/src/broker/: client.ts  lifecycle.ts  main.ts  queue.ts  server.ts
dovai_claude/src/cli/: migrate.ts
dovai_claude/src/cli_provider/: claude.ts  gemini.ts  resolve.ts  types.ts
dovai_claude/templates/: CLAUDE.md  domain_context.md  identity.md
rust/: MOCK_PARITY_HARNESS.md  README.md
rust/crates/dovai-agent/: Cargo.toml
rust/crates/dovai-agent/examples/: retrofit_workers.rs
rust/crates/dovai-agent/src/: config.rs  error.rs  init.rs  lib.rs  preflight.rs  rename.rs  scaffold.rs  services.rs  templates.rs
rust/crates/dovai-agent/src/workers/: filing_clerk.rs  mod.rs
rust/crates/dovai-cli/: Cargo.toml
rust/crates/dovai-cli/assets/: app.css  app.js  index.html
rust/crates/dovai-cli/src/: agent_init.rs  args.rs  file_attach.rs  main.rs  render.rs  settings_server.rs  setup.rs
rust/crates/dovai-cli/tests/: cli_flags_and_config_defaults.rs  mock_parity_harness.rs  resume_slash_commands.rs
rust/scripts/: run_mock_parity_diff.py  run_mock_parity_harness.sh
site/: index.html
(+113 files in other folders)
