[package]
name = "dovai-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "dovai"
path = "src/main.rs"

[dependencies]
api = { path = "../api" }
axum = "0.8"
base64 = "0.22"
commands = { path = "../commands" }
compat-harness = { path = "../compat-harness" }
dovai-agent = { path = "../dovai-agent" }
crossterm = "0.28"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rusqlite = { version = "0.32", features = ["bundled"] }
pulldown-cmark = "0.13"
rustyline = "15"
runtime = { path = "../runtime" }
plugins = { path = "../plugins" }
serde = { version = "1", features = ["derive"] }
serde_json.workspace = true
syntect = "5"
telemetry = { path = "../telemetry" }
tokio = { version = "1", features = ["rt-multi-thread", "signal", "time", "net", "io-util", "macros"] }
tools = { path = "../tools" }

[lints]
workspace = true

[dev-dependencies]
mock-anthropic-service = { path = "../mock-anthropic-service" }
serde_json.workspace = true
tokio = { version = "1", features = ["rt-multi-thread"] }
